--- a/styles/home.scss
+++ b/styles/home.scss
@@ -7,6 +7,7 @@ body {
   font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI",
     "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
     "Helvetica Neue", sans-serif;
+  line-height: 1.7;
 }
 
 @media (min-width: 1500px) {
@@ -481,7 +482,7 @@ section.auto-height {
   }
 
   &:hover {
-    background-color: $black80;
+    background-color: $primary;
   }
 }
 
@@ -630,7 +631,6 @@ footer {
   }
 
   .social-link {
-    background-color: $black60;
     width: 1.5rem;
     height: 1.5rem;
   }
