--- a/styles/style.css
+++ b/styles/style.css
@@ -7356,16 +7356,21 @@ nav {
         nav .nav-item .nav-link.btn:focus {
           box-shadow: none;
           border-color: #121242; }
+          nav .nav-item .nav-link.btn:focus .social-link {
+            background-color: #7950ed; }
         nav .nav-item .nav-link.btn:hover {
           background-color: #ffffff;
           border-color: #7950ed;
           color: #7950ed; }
+          nav .nav-item .nav-link.btn:hover .social-link {
+            background-color: #7950ed; }
 
 html {
   scroll-behavior: smooth; }
 
 body {
-  font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif; }
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  line-height: 1.7; }
 
 @media (min-width: 1500px) {
   .container {
@@ -7696,10 +7701,14 @@ section.auto-height {
   .btn-outline-secondary:focus {
     box-shadow: none;
     border-color: #121242; }
+    .btn-outline-secondary:focus .social-link {
+      background-color: #7950ed; }
   .btn-outline-secondary:hover {
     background-color: #ffffff;
     border-color: #7950ed;
     color: #7950ed; }
+    .btn-outline-secondary:hover .social-link {
+      background-color: #7950ed; }
 
 .social-link {
   background-color: #121242;
@@ -7732,7 +7741,7 @@ section.auto-height {
     -webkit-mask-image: url(../assets/icons/github.svg);
     mask-image: url(../assets/icons/github.svg); }
   .social-link:hover {
-    background-color: #414168; }
+    background-color: #7950ed; }
 
 .bg-image-policy-header {
   background-image: url(../assets/images/bg/hero_background_policy.png);
@@ -7858,7 +7867,6 @@ footer {
       footer .contact-details {
         margin-bottom: 4rem; } }
   footer .social-link {
-    background-color: #71718e;
     width: 1.5rem;
     height: 1.5rem; }
 
@@ -7968,18 +7976,34 @@ footer {
       margin-top: 2rem; }
     .action-panel-list .panel .actions {
       margin-top: 2rem; }
-  .action-panel-list.build-community .panel {
-    border-right: 1px solid #d0d0d9; }
-    .action-panel-list.build-community .panel:last-child {
-      border-right: none; }
+  .action-panel-list.build-community {
+    padding: 1rem 3rem; }
+    .action-panel-list.build-community .panel {
+      position: relative; }
+      .action-panel-list.build-community .panel:before {
+        content: "";
+        position: absolute;
+        top: 4rem;
+        bottom: 4rem;
+        right: 0;
+        border-right: 1px solid #d0d0d9; }
+      .action-panel-list.build-community .panel:last-child {
+        border-right: none; }
+        .action-panel-list.build-community .panel:last-child:before {
+          display: none; }
   .action-panel-list.support .panel {
     background-color: #ffffff;
+    border: 1px solid #e7e7ec;
+    border-radius: 4px;
     margin: 1rem;
-    align-items: flex-start; }
+    align-items: flex-start;
+    padding: 2rem; }
     .action-panel-list.support .panel:last-child {
       border-right: none; }
     .action-panel-list.support .panel .description {
       text-align: left; }
+    .action-panel-list.support .panel .mono-box span {
+      background-color: #121242; }
   @media (max-width: 991.98px) {
     .action-panel-list {
       display: block; }
